[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
actix-web = "4.9.0"
serde = "1.0.210"
tokio = { version = "1", features = ["full"] }
mongodb = "3.1.0"
rand = "0.8.5"
openssl = "0.10.68"
lazy_static = "1.5.0"
uuid = "1.11.0"
actix-cors = "0.7.0"
nanoid = "0.4.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
bson = "2.0"
actix-session = "0.10.1"
anyhow = "1.0.93"
once_cell = "1.20.2"
thiserror = "2.0.2"
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation"] }
serde_json = "1.0.132"
tokio-stream = { version = "0.1.16", features = ["sync"] }
futures = "0.3.31"
parking_lot = "0.12.3"

[[bin]]
name = "survey-sphere-be"
path = "src/main.rs"
